# huffman

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.build  Dockerfile.builder  Dockerfile.runtime  README.md  Rocket.toml  _env  build.sh  docker-build.sh  docker-deploy.sh  doppler.yaml
.github/workflows/: docker-base.yml  main.yml
src/: main.rs
src/drivers/: mod.rs
src/drivers/S3/: mod.rs
src/drivers/SQS/: mod.rs
src/drivers/kafka/: mod.rs
src/drivers/s3/: mod.rs
src/services/: mod.rs
src/services/events/: message.rs  mod.rs
src/services/image/: mod.rs
src/services/logger/: mod.rs
src/services/storage/: mod.rs
src/utils/: http.rs  mod.rs
