[package]
name = "huffman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
libvips = "1.4.3"
dotenv = "0.15.0"
aws-config = "0.15.0"
aws-sdk-s3 = "0.15.0"
aws-sdk-sqs = "0.15.0"
anyhow = "1.0"
enum-map = "2.4.1"
serde = "1.0.142"
serde_json = "1.0.83"
datadog-logs = { version = "0.2.1", features = ["nonblocking", "with-tokio"] }
log = "0.4"